# ESP8266Audio

./: CMakeLists.txt  README.md
examples/MixerSample/: MixerSample.ino
examples/PlayAACFromPROGMEM/: PlayAACFromPROGMEM.ino
examples/PlayFLAC-SD-SPDIF/: PlayFLAC-SD-SPDIF.ino
examples/PlayFLACFromPROGMEMToDAC/: PlayFLACFromPROGMEMToDAC.ino
examples/PlayMIDIFromLittleFS/: PlayMIDIFromLittleFS.ino
examples/PlayMIDIFromSPIFFS/: PlayMIDIFromSPIFFS.ino
examples/PlayMODFromPROGMEMToDAC/: PlayMODFromPROGMEMToDAC.ino
examples/PlayMODFromPROGMEMToPWM/: PlayMODFromPROGMEMToPWM.ino
examples/PlayMP3FromSPIFFS/: PlayMP3FromSPIFFS.ino
examples/PlayMP3ToSPDIF/: PlayMP3ToSPDIF.ino
examples/PlayOpusFromSPIFFS/: PlayOpusFromSPIFFS.ino
examples/PlayWAVFromFunction/: PlayWAVFromFunction.ino
examples/PlayWAVFromPROGMEM/: PlayWAVFromPROGMEM.ino
examples/StreamMP3FromHTTP/: StreamMP3FromHTTP.ino
examples/StreamMP3FromHTTPToSPDIF/: StreamMP3FromHTTPToSPDIF.ino
examples/StreamMP3FromHTTP_SPIRAM/: StreamMP3FromHTTP_SPIRAM.ino
examples/StreamOnHost/: StreamOnHost.ino
examples/TalkingClockI2S/: TalkingClockI2S.ino
examples/WebRadio/: WebRadio.ino  web.cpp
src/: AudioFileSource.h  AudioFileSourceBuffer.cpp  AudioFileSourceFATFS.h  AudioFileSourceFS.h  AudioFileSourceFunction.h  AudioFileSourceHTTPStream.h  AudioFileSourceICYStream.h  AudioFileSourceID3.h  AudioFileSourceLittleFS.h  AudioFileSourceSPIFFS.h  AudioFileSourceSPIRAMBuffer.cpp  AudioFileSourceSTDIO.cpp  AudioFileSourceSTDIO.h  AudioFileStream.cpp  AudioFileStream.h  AudioGenerator.h  AudioLogger.h  AudioOutput.h  AudioOutputBuffer.cpp  AudioOutputFilterBiquad.cpp  AudioOutputFilterDecimate.cpp  AudioOutputI2S.cpp  AudioOutputI2S.h  AudioOutputI2SNoDAC.cpp  AudioOutputMixer.cpp  AudioOutputPWM.cpp  AudioOutputPWM.h  AudioOutputSPDIF.cpp  AudioOutputSPIFFSWAV.cpp  AudioOutputSPIFFSWAV.h  AudioOutputSTDIO.cpp  AudioOutputSTDIO.h  AudioStatus.h  spiram-fast.h
src/driver/: SinglePinI2SDriver.h
src/libflac/: crc.c  stream_decoder.c
src/libhelix-aac/: aaccommon.h
src/libopus/silk/: quant_LTP_gains.c  sigm_Q15.c
tests/host/: Serial.cpp  aac.cpp  flac.cpp  midi.cpp  mod.cpp  mp3.cpp  opus.cpp  wav.cpp
